# PKO-Kantor-Monitor

./: .gitignore  README.md  config.example.toml  pyproject.toml
deployment/systemd/: pko-rate-watcher.service  pko-rate-watcher.timer
src/pko_rate_watcher/: __init__.py  config.py  logger.py  main.py  scraper.py  sound_notifier.py  state.py  telegram_notifier.py
tests/: test_alerts.py  test_config.py  test_main_sound.py  test_scraper.py  test_sound_notifier.py  test_state.py  test_telegram_notifier.py
tests/fixtures/: pko_sample.txt
