[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pko-usd-rate-watcher"
version = "0.1.0"
description = "Local Windows CLI watcher for public PKO BP FX rates with Telegram alerts."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
